2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* port.cc (OutputRedistributionPort::setupCleanup,
	InputRedistributionPort::setupCleanup):  Delete spatialNegotiator
	at end of setup phase.

	* music/connector.hh, connector.cc, runtime.cc: Resolve a memory
	allocation problem so that we leak less memory.

	* port.cc (ContInputPort::mapImpl): Don't call assertInput ()
	here.

	* music/error.hh, music/port.hh, music/runtime.hh, music/setup.hh,
	error.cc, port.cc, runtime.cc, setup.cc (Setup::Setup,
	Runtime::Runtime, Port::map): Added error messages when trying to
	call repeatedly.

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.1

	* music/connector.hh, music/port.hh, music/spatial.hh,
	music/subconnector.hh, music/temporal.hh, configuration.cc,
	connector.cc, port.cc, spatial.cc, subconnector.cc, temporal.cc:
	Pass MPI::Datatype to ContSubconnectors; Some code cleanups.

2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/synchronizer.hh, synchronizer.cc, connector.cc: Removed
	some old cruft in timing logic.

	* sampler.cc: #include <cstring>

	* setup.cc (Setup::publishMessageInput,
	Setup::publishMessageOutput): Added.

	* Makefile.am: Link shared library against MPI.

	* music/port.hh, port.cc: Bugfixed error reporting.

	* Makefile.am: Don't accept unresolved symbols in the shared library.

	* music/version.hh, version.cc: New files.

	* Makefile.am: Added ditto.

	* Makefile.am: Set shared library version 1.0.0. (Note that this
	version number follows different rules than the MUSIC version.)

	* port.cc (Port::assertOutput, Port::assertInput, Port::hasWidth,
	Port::width): Supply port name in error messages.

	* connectivity.cc (Connectivity::add): Pass port name to
	ConnectivityInfo constructor.

	* music/connectivity.hh (ConnectivityInfo): Added portName (to be
	used for more comprehensible error messages).

2009-03-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* setup.hh (class Setup): Hide internal API as private.
